[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Fonts/Cabin/Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Instances/Actors/player/DiaUI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Dia_UI_Background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="DiaUI" type="Control" groups=[
"DiaUI",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="Background"]
margin_top = 588.0
margin_right = 1276.0
margin_bottom = 718.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "blah blah blah, test test test this is a test text yadayadaya
[gender]a[/gender]
[playername]a[/playername]"
text = "blah blah blah, test test test this is a test text yadayadaya
[gender]a[/gender]
[playername]a[/playername]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="Control" parent="Background"]
margin_left = 829.0
margin_top = 173.0
margin_right = 1275.0
margin_bottom = 569.0
rect_min_size = Vector2( 446, 396 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesHolder" type="VBoxContainer" parent="Background/Choices"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.05176e-05
margin_bottom = 0.999969
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TweenVisibility" type="Tween" parent="."]
[connection signal="StartDialougRemotely" from="." to="." method="_on_DiaUI_StartDialougRemotely"]
